# flex_sqlite_rs

./: Cargo.toml  Dockerfile  README.md  Taskfile.yml  test.sql
src/: lib.rs
tests/: test_plugin.rs
